changed placeholder.html file name to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" src="./icon.jpeg">
     <style>
         .bold-text {
+            position:relative;
+            left: 50px;
             text-align: left;
             column-count: 1;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
