added bootstrap responsiveness for mobile compatibility

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             color: white;
             border-radius: 10px;
         }
-
+            
+            <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     </style>
 
 </head>
@@ -106,6 +107,9 @@
     <footer>
        <p>&copy; 2023 Commercial Real Estate Rental</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
 
